# dystonse-gtfs-data

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  notes.md
data/: vbn-gtfsrt-2020-03-18T07:42:01+01:00.pb
data/gtfs/: .gitignore
src/: gtfs.rs  importer.rs  main.rs  static.html
src/analyser/: count.rs  curve_analysis.rs  curve_utils.rs  curve_visualisation.rs  curves.rs  default_curves.rs  mod.rs  route_data.rs  route_sections.rs  specific_curves.rs  time_slots.rs  visual_schedule.rs
src/importer/: batched_statements.rs  mod.rs  per_schedule_importer.rs  scheduled_predictions_importer.rs
src/monitor/: css.rs  journey_data.rs  mod.rs  style.css  time_curve.rs
src/predictor/: mod.rs  real_time.rs
src/types/: curve_data.rs  db_item.rs  default_curves.rs  delay_statistics.rs  event_type.rs  gtfs_time.rs  mod.rs  prediction_result.rs  route_data.rs  route_sections.rs  route_variant_data.rs  structured_map_serde.rs  time_slots.rs  types.md
web-assets/: impressum.html  style.css
web-assets/favicons/: browserconfig.xml  site.webmanifest
web-assets/help/: index.html
web-assets/help/images/: abfahrt-zeile-mit-markierungen.xcf  busfahrt-seite.xcf  schnell.xcf  sicher.xcf
