[package]
name = "dystonse-gtfs-importer"
version = "1.0.0"
authors = ["Lena Schimmel <mail@lenaschimmel.de>", "Kirstin Rohwer <mail@metakiki.net>"]
edition = "2018"

[dependencies]
gtfs-rt = "0.1.0"
prost = "0.4"
bytes = "0.5.4"
gtfs-structures = { git = "https://github.com/dystonse/gtfs-structure.git", branch = "accelerate", default-features = false, version = "0.19.1" }
mysql = "18.0.0"
chrono = "0.4.11"