[package]
name = "dystonse-gtfs-data"
version = "1.0.0"
authors = ["Lena Schimmel <mail@lenaschimmel.de>", "Kirstin Rohwer <mail@metakiki.net>"]
edition = "2018"

[dependencies]
gtfs-rt = "0.1.0"
prost = "0.4"
bytes = "0.5.4"
gtfs-structures = { git = "https://github.com/dystonse/gtfs-structure.git", branch = "for-dystonse-gtfs-data", default-features = false, version = "0.20.0" }
mysql = "18.0.0"
chrono = "0.4.11"
zip = "0.5"
rayon = "1.1"
clap = { git = "https://github.com/clap-rs/clap/" } # use unpublished version because a major update to 3.0 is coming very soon.
regex = "1"
lazy_static = "1.4.0"
retry = "1.0.0"
simple-error = "0.2.1"
reqwest = { version = "0.10.4", features = ["blocking"] }
parse_duration = "2.1.0"
plotters = "0.2.12"
rand = "0.7.3"
rand_xorshift = "0.2.0"
rand_distr = "0.2.2"
itertools = "0.9.0"