[package]
name = "dystonse-gtfs-data"
version = "1.0.0"
authors = ["Lena Schimmel <mail@lenaschimmel.de>", "Kirstin Rohwer <mail@metakiki.net>"]
edition = "2018"

[features]
default = []
visual-schedule = ["plotters"]
monitor = ["hyper", "hyper-staticfile", "tokio", "futures", "chrono_locale"]

[profile.release]
debug = true

[dependencies]
gtfs-rt = { git = "https://github.com/dystonse/gtfs-rt.git", branch = "extension", version = "0.1.0" }
prost = "0.4"
bytes = "0.5.4"
gtfs-structures = { git = "https://github.com/dystonse/gtfs-structure.git", branch = "for-dystonse-gtfs-data", default-features = false, version = "0.21.0" }
mysql = "18.0.0"
chrono = "0.4.11"
zip = "0.5"
rayon = "1.1"
clap = { git = "https://github.com/clap-rs/clap.git", rev="7bc0fed82ef03d2db526d36dfedad3276f97cada" } # "3.0.0-beta.1"
regex = "1"
lazy_static = "1.4.0"
retry = "1.0.0"
simple-error = "0.2.1"
ureq = "0.11.4"
parse_duration = "2.1.0"
plotters = { version = "0.2.12", optional = true }
rand = "0.7.3"
rand_xorshift = "0.2.0"
rand_distr = "0.2.2"
itertools = "0.9.0"
dystonse-curves =  { git = "https://github.com/dystonse/dystonse-curves.git" }
# dystonse-curves =  { path = "../dystonse-curves" }
gnuplot = "0.0.36"
colorous = "1.0.2"
rmp-serde = "0.14.3"
serde = { version = "1.0.112", features = ["derive"] }
hyper = { version = "0.13", optional = true }
hyper-staticfile = { version = "0.5.3", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
futures = {version = "0.3", optional = true}
url = "2.1.1"
percent-encoding = "2.1.0"
geo = "0.14.1"
png = "0.16.7"
base64 = "0.12.3"
chrono_locale = { version = "0.1.1", optional = true }